DRT-219 - styled report time status on projects page - fixed alignments in instances and projects pages

--- a/DailyReportWeb/Content/main.scss
+++ b/DailyReportWeb/Content/main.scss
@@ -356,6 +356,17 @@ div.disabled {
     }
 }
 
+[data-page='projects'] {
+
+    .projects .help-block {
+        margin-top: -10px;
+
+        & > span {
+            background-color: transparent;
+        }
+    }
+}
+
 [data-page='confirmIndividualDraft'] {
 
     header {
